Added more materials on motorbike case

--- a/content/1.02_openfoam-handson.rst
+++ b/content/1.02_openfoam-handson.rst
@@ -1,8 +1,8 @@
 .. _openfoam-handson:
 
 
-What is OenFOAM ?
-=================
+What is OpenFOAM ?
+==================
 
 - OpenFOAM is an open source Computation Fluid Dynamics (CFD) solve released and developed primarily by OpenCFD Ltd since 2004. 
 
